Compiladores/TP3_Parser_Cool/cool.output
Terminals unused in grammar

    ERROR


State 150 conflicts: 9 shift/reduce
State 159 conflicts: 9 shift/reduce
State 172 conflicts: 9 shift/reduce
State 176 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' '}' ';'
    5      | CLASS TYPEID '{' feature_list '}' ';'
    6      | CLASS TYPEID INHERITS TYPEID '{' '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    8      | CLASS error ';' class

    9 feature_list: feature
   10             | feature_list feature

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID ':' TYPEID ASSIGN expression ';'
   14        | OBJECTID ':' TYPEID ';'

   15 formal_list: formal
   16            | formal_list ',' formal

   17 formal: OBJECTID ':' TYPEID

   18 expression: INT_CONST
   19           | BOOL_CONST
   20           | STR_CONST
   21           | OBJECTID
   22           | '(' expression ')'
   23           | '{' expression_block '}'
   24           | OBJECTID ASSIGN expression
   25           | expression LE expression
   26           | expression '<' expression
   27           | expression '=' expression
   28           | '~' expression
   29           | expression '*' expression
   30           | expression '/' expression
   31           | expression '+' expression
   32           | expression '-' expression
   33           | NEW TYPEID
   34           | ISVOID expression
   35           | NOT expression
   36           | cond_expression
   37           | dispatch_expression
   38           | while_expression
   39           | case_expression
   40           | let_expression

   41 expression_list: expression
   42                | expression_list ',' expression

   43 expression_block: expression ';'
   44                 | expression_block expression ';'
   45                 | expression_block ';' error ';'

   46 case_expression: CASE expression OF case_branches ESAC

   47 case_branches: case_branch ';'
   48              | case_branches case_branch ';'

   49 case_branch: OBJECTID ':' TYPEID DARROW expression

   50 while_expression: WHILE expression LOOP expression POOL

   51 dispatch_expression: expression '.' OBJECTID '(' expression_list ')'
   52                    | OBJECTID '(' ')'
   53                    | OBJECTID '(' expression_list ')'
   54                    | expression '.' OBJECTID '(' ')'
   55                    | expression '@' TYPEID '.' OBJECTID '(' ')'
   56                    | expression '@' TYPEID '.' OBJECTID '(' expression_list ')'

   57 cond_expression: IF expression THEN expression FI
   58                | IF expression THEN expression ELSE expression FI

   59 let_expression: LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   60               | LET OBJECTID ':' TYPEID IN expression
   61               | LET OBJECTID ':' TYPEID ',' let_expression
   62               | LET OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   63               | OBJECTID ':' TYPEID ASSIGN expression IN expression
   64               | OBJECTID ':' TYPEID IN expression
   65               | OBJECTID ':' TYPEID ',' let_expression
   66               | OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   67               | LET error ',' let_expression


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 11 12 22 51 52 53 54 55 56
    ')' (41) 11 12 22 51 52 53 54 55 56
    '*' (42) 29
    '+' (43) 31
    ',' (44) 16 42 61 62 65 66 67
    '-' (45) 32
    '.' (46) 51 54 55 56
    '/' (47) 30
    ':' (58) 11 12 13 14 17 49 59 60 61 62 63 64 65 66
    ';' (59) 4 5 6 7 8 11 12 13 14 43 44 45 47 48
    '<' (60) 26
    '=' (61) 27
    '@' (64) 55 56
    '{' (123) 4 5 6 7 11 12 23
    '}' (125) 4 5 6 7 11 12 23
    '~' (126) 28
    error (256) 8 45 67
    CLASS (258) 4 5 6 7 8
    ELSE (259) 58
    FI (260) 57 58
    IF (261) 57 58
    IN (262) 59 60 63 64
    INHERITS (263) 6 7
    LET (264) 59 60 61 62 67
    LOOP (265) 50
    POOL (266) 50
    THEN (267) 57 58
    WHILE (268) 50
    CASE (269) 46
    ESAC (270) 46
    OF (271) 46
    DARROW (272) 49
    NEW (273) 33
    ISVOID (274) 34
    STR_CONST <symbol> (275) 20
    INT_CONST <symbol> (276) 18
    BOOL_CONST <boolean> (277) 19
    TYPEID <symbol> (278) 4 5 6 7 11 12 13 14 17 33 49 55 56 59 60 61 62 63 64 65 66
    OBJECTID <symbol> (279) 11 12 13 14 17 21 24 49 51 52 53 54 55 56 59 60 61 62 63 64 65 66
    ASSIGN (280) 13 24 59 62 63 66
    NOT (281) 35
    LE (282) 25
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6 7 8
        on right: 2 3 8
    feature_list <features> (49)
        on left: 9 10
        on right: 5 7 10
    feature <feature> (50)
        on left: 11 12 13 14
        on right: 9 10
    formal_list <formals> (51)
        on left: 15 16
        on right: 11 16
    formal <formal> (52)
        on left: 17
        on right: 15 16
    expression <expression> (53)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
        on right: 11 12 13 22 24 25 26 27 28 29 30 31 32 34 35 41 42 43 44 46 49 50 51 54 55 56 57 58 59 60 62 63 64 66
    expression_list <expressions> (54)
        on left: 41 42
        on right: 42 51 53 56
    expression_block <expressions> (55)
        on left: 43 44 45
        on right: 23 44 45
    case_expression <expression> (56)
        on left: 46
        on right: 39
    case_branches <cases> (57)
        on left: 47 48
        on right: 46 48
    case_branch <case_> (58)
        on left: 49
        on right: 47 48
    while_expression <expression> (59)
        on left: 50
        on right: 38
    dispatch_expression <expression> (60)
        on left: 51 52 53 54 55 56
        on right: 37
    cond_expression <expression> (61)
        on left: 57 58
        on right: 36
    let_expression <expression> (62)
        on left: 59 60 61 62 63 64 65 66 67
        on right: 40 61 62 65 66 67


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS . TYPEID '{' '}' ';'
    5      | CLASS . TYPEID '{' feature_list '}' ';'
    6      | CLASS . TYPEID INHERITS TYPEID '{' '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    8      | CLASS . error ';' class

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program . $end

    $end  shift, and go to state 7


State 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 5

    8 class: CLASS error . ';' class

    ';'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID . '{' '}' ';'
    5      | CLASS TYPEID . '{' feature_list '}' ';'
    6      | CLASS TYPEID . INHERITS TYPEID '{' '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end .

    $default  accept


State 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 9

    8 class: CLASS error ';' . class

    CLASS  shift, and go to state 1

    class  go to state 12


State 10

    6 class: CLASS TYPEID INHERITS . TYPEID '{' '}' ';'
    7      | CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 13


State 11

    4 class: CLASS TYPEID '{' . '}' ';'
    5      | CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 15

    feature_list  go to state 16
    feature       go to state 17


State 12

    8 class: CLASS error ';' class .

    $default  reduce using rule 8 (class)


State 13

    6 class: CLASS TYPEID INHERITS TYPEID . '{' '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 18


State 14

   11 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID . '(' ')' ':' TYPEID '{' expression '}' ';'
   13        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   14        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 19
    ':'  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 21


State 16

    5 class: CLASS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 22

    feature  go to state 23


State 17

    9 feature_list: feature .

    $default  reduce using rule 9 (feature_list)


State 18

    6 class: CLASS TYPEID INHERITS TYPEID '{' . '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 24

    feature_list  go to state 25
    feature       go to state 17


State 19

   11 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expression '}' ';'
   12        | OBJECTID '(' . ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 26
    ')'       shift, and go to state 27

    formal_list  go to state 28
    formal       go to state 29


State 20

   13 feature: OBJECTID ':' . TYPEID ASSIGN expression ';'
   14        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 30


State 21

    4 class: CLASS TYPEID '{' '}' ';' .

    $default  reduce using rule 4 (class)


State 22

    5 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 31


State 23

   10 feature_list: feature_list feature .

    $default  reduce using rule 10 (feature_list)


State 24

    6 class: CLASS TYPEID INHERITS TYPEID '{' '}' . ';'

    ';'  shift, and go to state 32


State 25

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
   10 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 33

    feature  go to state 23


State 26

   17 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 34


State 27

   12 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 35


State 28

   11 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expression '}' ';'
   16 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 36
    ','  shift, and go to state 37


State 29

   15 formal_list: formal .

    $default  reduce using rule 15 (formal_list)


State 30

   13 feature: OBJECTID ':' TYPEID . ASSIGN expression ';'
   14        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 38
    ';'     shift, and go to state 39


State 31

    5 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 32

    6 class: CLASS TYPEID INHERITS TYPEID '{' '}' ';' .

    $default  reduce using rule 6 (class)


State 33

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 40


State 34

   17 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 41


State 35

   12 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 42


State 36

   11 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 43


State 37

   16 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 26

    formal  go to state 44


State 38

   13 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 59
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 39

   14 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 14 (feature)


State 40

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 41

   17 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 17 (formal)


State 42

   12 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 65


State 43

   11 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 66


State 44

   16 formal_list: formal_list ',' formal .

    $default  reduce using rule 16 (formal_list)


State 45

   57 cond_expression: IF . expression THEN expression FI
   58                | IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 67
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 46

   59 let_expression: LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   60               | LET . OBJECTID ':' TYPEID IN expression
   61               | LET . OBJECTID ':' TYPEID ',' let_expression
   62               | LET . OBJECTID ':' TYPEID ASSIGN expression ',' let_expression
   67               | LET . error ',' let_expression

    error     shift, and go to state 68
    OBJECTID  shift, and go to state 69


State 47

   50 while_expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 70
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 48

   46 case_expression: CASE . expression OF case_branches ESAC

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 71
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 49

   33 expression: NEW . TYPEID

    TYPEID  shift, and go to state 72


State 50

   34 expression: ISVOID . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 73
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 51

   20 expression: STR_CONST .

    $default  reduce using rule 20 (expression)


State 52

   18 expression: INT_CONST .

    $default  reduce using rule 18 (expression)


State 53

   19 expression: BOOL_CONST .

    $default  reduce using rule 19 (expression)


State 54

   21 expression: OBJECTID .
   24           | OBJECTID . ASSIGN expression
   52 dispatch_expression: OBJECTID . '(' ')'
   53                    | OBJECTID . '(' expression_list ')'
   63 let_expression: OBJECTID . ':' TYPEID ASSIGN expression IN expression
   64               | OBJECTID . ':' TYPEID IN expression
   65               | OBJECTID . ':' TYPEID ',' let_expression
   66               | OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ASSIGN  shift, and go to state 74
    '('     shift, and go to state 75
    ':'     shift, and go to state 76

    $default  reduce using rule 21 (expression)


State 55

   35 expression: NOT . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 77
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 56

   28 expression: '~' . expression

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 78
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 57

   23 expression: '{' . expression_block '}'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 79
    expression_block     go to state 80
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 58

   22 expression: '(' . expression ')'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 81
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 59

   13 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   25 expression: expression . LE expression
   26           | expression . '<' expression
   27           | expression . '=' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '+' expression
   32           | expression . '-' expression
   51 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   54                    | expression . '.' OBJECTID '(' ')'
   55                    | expression . '@' TYPEID '.' OBJECTID '(' ')'
   56                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'

    LE   shift, and go to state 82
    '.'  shift, and go to state 83
    '@'  shift, and go to state 84
    '*'  shift, and go to state 85
    '/'  shift, and go to state 86
    '+'  shift, and go to state 87
    '-'  shift, and go to state 88
    '<'  shift, and go to state 89
    '='  shift, and go to state 90
    ';'  shift, and go to state 91


State 60

   39 expression: case_expression .

    $default  reduce using rule 39 (expression)


State 61

   38 expression: while_expression .

    $default  reduce using rule 38 (expression)


State 62

   37 expression: dispatch_expression .

    $default  reduce using rule 37 (expression)


State 63

   36 expression: cond_expression .

    $default  reduce using rule 36 (expression)


State 64

   40 expression: let_expression .

    $default  reduce using rule 40 (expression)


State 65

   12 feature: OBJECTID '(' ')' ':' TYPEID '{' . expression '}' ';'

    IF          shift, and go to state 45
    LET         shift, and go to state 46
    WHILE       shift, and go to state 47
    CASE        shift, and go to state 48
    NEW         shift, and go to state 49
    ISVOID      shift, and go to state 50
    STR_CONST   shift, and go to state 51
    INT_CONST   shift, and go to state 52
    BOOL_CONST  shift, and go to state 53
    OBJECTID    shift, and go to state 54
    NOT         shift, and go to state 55
    '~'         shift, and go to state 56
    '{'         shift, and go to state 57
    '('         shift, and go to state 58

    expression           go to state 92
    case_expression      go to state 60
    while_expression     go to state 61
    dispatch_expression  go to state 62
    cond_expression      go to state 63
    let_expression       go to state 64


State 66

   11 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 93


State 67

   25 expression: expression . LE expression
   26           | expression . '<' expression
   27           | expression . '=' expression
   29           | expression . '*' expression
   30           | expression . '/' expression
   31           | expression . '+' expression
   32           | expression . '-' expression
   51 dispatch_expression: expression . '.' OBJECTID '(' expression_list ')'
   54                    | expression . '.' OBJECTID '(' ')'
   55                    | expression . '@' TYPEID '.' OBJECTID '(' ')'
   56                    | expression . '@' TYPEID '.' OBJECTID '(' expression_list ')'
   57 cond_expression: IF expression . THEN expression FI
   58                | IF expression . THEN expression ELSE expression FI

    THEN  shift, and go to state 94
    LE    shift, and go to state 82
    '.'   shift, and go to state 83
    '@'   shift, and go to state 84
    '*'   shift, and go to state 85
    '/'   shift, and go to state 86
    '+'   shift, and go to state 87
    '-'   shift, and go to state 88
    '<'   shift, and go to state 89
    '='   shift, and go to state 90


State 68

   67 let_expression: LET error . ',' let_expression

    ','  shift, and go to state 95


State 69

   59 let_expression: LET OBJECTID . ':' TYPEID ASSIGN expression IN expression
   60               | LET OBJECTID . ':' TYPEID IN expression
   61               | LET OBJECTID . ':' TYPEID ',' let_expression
   62               | LET OBJECTID . ':' TYPEID ASSIGN expression ',' let_expression

    ':'  shift, and go to state 96


State 70
